--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,10 @@ jobs:
     docker:
       # Use the same Docker base as the project
       - image: python:3.7.3-stretch
-    working_directory: ~/repo
+    working_directory: ~/DevOps_Microservices/project-ml-microservice-kubernetes
     steps:
-      - checkout
+      - checkout:
+          path: ~/DevOps_Microservices
       # Download and cache dependencies
       - restore_cache:
           keys:
